# RIAssigner

./: .gitignore  .prospector.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: anaconda.yml  codeql-analysis.yml  main.yml  mermaid.yml  publish_pypi.yaml  python-package-conda.yml  python-package.yml
RIAssigner/: __init__.py  __main__.py  utils.py
RIAssigner/cli/: CreateMethodAction.py  LoadDataAction.py  __init__.py
RIAssigner/compute/: ComputationMethod.py  CubicSpline.py  Kovats.py  __init__.py
RIAssigner/data/: Data.py  MatchMSData.py  NumpyData.py  PandasData.py  SimpleData.py  ValidateSimpleData.py  __init__.py
conda/: environment-build.yml  environment-dev.yml  environment.yml  meta.yaml  meta.yml
doc/: example_usage.ipynb
docs/: diagram.md
paper/: paper.md  plots.ipynb  references.bib
tests/: test_cli_CreateMethodAction.py  test_cli_LoadDataAction.py  test_compute.py  test_compute_ComputationMethod.py  test_compute_CubicSpline.py  test_compute_Kovats.py  test_data.py  test_data_Data.py  test_data_MatchMS.py  test_data_MatchMSData.py  test_data_NumpyData.py  test_data_PandasData.py  test_data_SimpleData.py  test_data_ValidateSimpleData.py  test_data_extract_ri.py  test_data_has_retention_indices.py  test_data_has_retention_times.py  test_integration.py  test_pandas_data.py  test_utils.py
tests/builders/: MatchMSDataBuilder.py  PandasDataBuilder.py  SimpleDataBuilder.py  ValidateSimpleDataBuilder.py  __init__.py
tests/data/: Alkanes_20210325.csv  xcms_variable_metadata.csv
tests/data/csv/: Alkanes_retention_index.csv  Alkanes_ri.csv  fake_ri_ms_w4e.csv  has_retention_indices_f.csv  has_retention_indices_t.csv  has_retention_times_f.csv  has_retention_times_t.csv  minimal_unclean_colnames.csv
tests/data/cubicspline/: PFAS_added_rt.npy  aplcms_aligned_peaks.npy  xcms_variable_metadata.npy
tests/data/integration/: peaks_with_rt.csv
tests/data/kovats/: PFAS_added_rt.npy  aplcms_aligned_peaks.npy  xcms_variable_metadata.npy
tests/data/msp/: Alkanes_20210325.msp  GNPS_MSMLS.msp  MSMS-Neg-PFAS_20200806.msp  MSMS-Neg-Vaniya-Fiehn_Natural_Products_Library_20200109.msp  PFAS_added_rt.msp  has_retention_indices_f.msp  has_retention_indices_t.msp  has_retention_times_f.msp  has_retention_times_t.msp  recetox_gc-ei_ms_20201028.msp
tests/data/parquet/: 10_qc_16x_dil_milliq.parquet
tests/fixtures/: __init__.py  data.py
tests/mocks/: DataStub.py
(+9 files in other folders)
