[tool.poetry]
name = "RIAssigner"
version = "0.4.1"
description = "Python library for retention index calculation."
authors = ["Helge Hecht <helge.hecht@recetox.muni.cz>", "Maksym Skoryk <maksym.skoryk@recetox.muni.cz>"]

license = "MIT License"
readme = "README.md"
repository = "https://github.com/RECETOX/RIAssigner"
keywords=[ 
    "gas chromatography",
    "mass spectrometry",
    "retention index"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "RIAssigner" },
]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
matchms = "^0.24.1"
numpy = "*"
pandas = "*"
pint = "^0.23"
scipy = "*"
urllib3 = "1.26.15"
fastparquet = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."RIAssigner/__version__.py"]